# deepagent_postgres

./: .gitignore  README.md  chat_interface.py  deepagent_graph.py  langgraph.json  pyproject.toml  run_deepagent_server.py  sample_data.sql  setup-chat-ui.sh  simple_connection_test.py  simple_demo.py  simple_test.py  start-deepagent-chat.sh  start-simple.sh  test_phoenix_tracing.py  test_postgres_tools.py  test_readonly_agent.py  test_with_openai_and_postgres.py
agent-chat-app/: README.md  langgraph.json  package-lock.json  package.json  tsconfig.json
agent-chat-app/apps/agents/src/deepagent-postgres/: configuration.ts  graph.ts
agent-chat-app/apps/web/: next.config.js  next.config.mjs  tsconfig.json
agent-chat-app/apps/web/src/components/thread/: index.tsx  markdown-text.tsx  tooltip-icon-button.tsx
agent-chat-app/apps/web/src/components/thread/agent-inbox/components/: state-view.tsx  thread-actions-view.tsx
agent-chat-app/apps/web/src/components/thread/messages/: ai.tsx  human.tsx
agent-chat-app/apps/web/src/components/ui/: button.tsx  password-input.tsx  sheet.tsx
deepagent-chat-ui/: package-lock.json  package.json
deepagent-chat-ui/apps/web/: package.json
examples/: postgres_example.py
src/deepagents/: __init__.py  graph.py  model.py  prompts.py  state.py  tools.py  tracing.py
